<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageView
            android:visibility="gone"
            android:layout_alignParentRight="true"
            android:id="@+id/iv_del"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:scaleType="center"
            android:src="@drawable/x" />

        <EditText
            android:layout_toLeftOf="@id/iv_del"
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:drawableLeft="@drawable/username"
            android:drawablePadding="5dp"
            android:gravity="left|center_vertical"
            android:hint="@string/username"
            android:singleLine="true"
            android:textColor="@color/page_title"
            android:textCursorDrawable="@null"
            android:textSize="15sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/line_color" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_alignParentRight="true"
            android:id="@+id/tv_forgot_pwd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="@string/forgot_pwd"
            android:textSize="12sp"
            android:textColor="@color/line_color"
             />

        <EditText
            android:layout_toLeftOf="@id/tv_forgot_pwd"
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="@null"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="5dp"
            android:gravity="left|center_vertical"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/page_title"
            android:textCursorDrawable="@null"
            android:textSize="15sp" />
    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/line_color" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:background="@drawable/shape_login"
            android:text="@string/login"
            android:textColor="@color/indicatorcolor" />
    </RelativeLayout>

</LinearLayout>