<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fff"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line_color" />

    <RelativeLayout
        android:id="@+id/rl_head"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/selector_menu_item"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/tv_head"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/head"
            android:textColor="@color/page_title"
            android:textSize="16sp" />

        <play.wm.ljb.com.wmiplay.view.CircleImageView
            android:id="@+id/iv_head_image"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_margin="5dp"
            android:layout_toRightOf="@id/tv_head"
            android:src="@drawable/user" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:scaleType="center"
            android:src="@drawable/arrow_right" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:background="@color/line_color" />
    </RelativeLayout>

    <RelativeLayout
        android:background="@drawable/selector_menu_item"
        android:id="@+id/rl_nikename"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/nickname"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/nickname"
            android:textColor="@color/page_title"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_nickname"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_toRightOf="@id/nickname"
            android:gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:text="昵称值"
            android:textColor="@color/userinfo_text"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:scaleType="center"
            android:src="@drawable/arrow_right" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:background="@color/line_color" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_username"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#fff"
        android:gravity="center_vertical"
        android:paddingLeft="10dp">

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/username_m"
            android:textColor="@color/page_title"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_toRightOf="@id/username"
            android:gravity="center_vertical"
            android:text="@string/username"
            android:textColor="@color/userinfo_text"
            android:textSize="16sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line_color" />
</LinearLayout>