<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fff"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line_color"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <ImageView
            android:id="@+id/iv_icon1"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/share_icon_qq" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/iv_icon1">

            <TextView
                android:layout_centerVertical="true"
                android:gravity="center"
                android:textSize="17sp"
                android:textColor="@color/page_title"
                android:text="@string/qq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            
            <Button
                android:layout_marginRight="10dp"
                android:textSize="15sp"
                android:textColor="@color/indicatorcolor"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:text="@string/bind"
                android:background="@drawable/btn"
                />
            
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/line_color"
                android:layout_alignParentBottom="true"
                />

        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <ImageView
            android:id="@+id/iv_icon2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/share_icon_weixin" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/iv_icon2">

            <TextView
                android:layout_centerVertical="true"
                android:gravity="center"
                android:textSize="17sp"
                android:textColor="@color/page_title"
                android:text="@string/weixin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:layout_marginRight="10dp"
                android:textSize="15sp"
                android:textColor="@color/indicatorcolor"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:text="@string/bind"
                android:background="@drawable/btn"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/line_color"
                android:layout_alignParentBottom="true"
                />

        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <ImageView
            android:id="@+id/iv_icon3"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/phone" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/iv_icon3">

            <TextView
                android:layout_centerVertical="true"
                android:gravity="center"
                android:textSize="17sp"
                android:textColor="@color/page_title"
                android:text="@string/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:layout_marginRight="10dp"
                android:textSize="15sp"
                android:textColor="@color/indicatorcolor"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:text="@string/bind"
                android:background="@drawable/btn"
                />
        </RelativeLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line_color"
        />
</LinearLayout>